# jplang

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  README.md  README.txt  docker-compose.override.yml  docker-compose.yml  docker_globals.env  docker_secrets.env  docker_secrets.env.example  english-long-frequency.txt  freq-mnemonics.txt  mnemonics-non-existent-sounds.txt  onyomi-keywords.txt  onyomi-plain-anki-cards.txt  sync_anki_with_mnemonics.py  test-free-word.py
docker-env/: all.env  frequency.env  grafana.env  graph.env  jaeger.env  keycloak.env  mailhog.env  manager.env  postgres.env  promtail.env  router.env  synonyms.env  workelements.env
kanji-breakdown/: .gitignore  kanji-svg.html
kanji-keywords/: Dockerfile  README.md  kanji-keywords.db
moonspeak/: .env.template  .gitignore  README.txt  certbot-lets-encrypt.sh  docker-compose-moonspeak.yml  docker-compose-prod.yml  docker-compose.override.localhost.yml  docker-compose.override.org.yml  docker-compose.override.ru.yml  docker-compose.override.test.yml  docker-compose.override.uk.yml  docker-compose.override.yml  docker-compose.yml  org-upgrade-docker-compose.sh  ru-upgrade-docker-compose.sh  start.sh
moonspeak/hud/: tmp.py  (+6 more)
moonspeak/router/: Cargo.toml  Dockerfile  Dockerfile-backend  README.md
moonspeak/router/backend/: main.py  requirements.txt
moonspeak/router/frontend/static/: main.css  main.js
moonspeak/router/src/: main.rs
onyomi-keywords/: .gitignore  README.md  anki-deck-onyomi-keywords.apkg  onyomi-frequency-low-to-high.txt
resources/: cmudict.dict
(+638 files in other folders)
