[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.0"
env_logger = "0.8.4"
url = "2.2.2"
awc = "3"
awc-uds = "0.1.1"
serde = { version = "1", features = ["derive"] }
html5ever = "0.25.2"
kuchiki = "0.8"
clap = { version = "3.2.8", features = ["derive"] }
